--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -57,7 +57,7 @@
     {% elsif post.citation %}
       <p>Recommended citation: {{ post.citation }} </p>
     {% elsif post.paperurl %}
-      <p>Download <a href=" {{ post.paperurl }} "><u>here</u></a></p>
+      <p>Original Article<a href=" {{ post.paperurl }} "><u>here</u></a></p>
     {% endif %}
 
   </article>
